--- a/src/layouts/AppLayout.css
+++ b/src/layouts/AppLayout.css
@@ -12,4 +12,5 @@
   overflow-x: hidden;
   padding-top: 100px;
   margin-top: -100px;
+  padding-bottom: 80px;
 }
